<resources>
    <string name="app_name">AppParking</string>

    <!-- API KEYS -->
    <string name="API_KEY">AIzaSyAcHUTXOAjM806HfMywO67zeA-xunpU82k</string>

    <!-- MENU -->
    <string name="MENU_TITLE">Parking App</string>

    <string name="CARD_HEADER_CLIENT">Cliente</string>
    <string name="CARD_HEADER_MORE">more</string>
    <string name="CARD_HEADER_CITY">Ciudad</string>
    <string name="CARD_HEADER_MODEL">Marca Coche</string>
    <string name="CARD_HEADER_DATA">Datos:</string>

    <string name="MENU_PROFILE">SEE PROFILE</string>
    <string name="MENU_PROFILE_MODEL">SM-16HJYF</string>
    <string name="MENU_PROFILE_MARCA">Samsung</string>

    <string name="MENU_LOCATION_SAVE">MAPS SAVE LOCATION</string>
    <string name="MENU_LOCATION_SAVE_HINT">TODAY: 12:30</string>
    <string name="MENU_LOCATION_LOAD">MAPS LAST LOCATION</string>
    <string name="MENU_LOCATION_LOAD_HINT">STREET, Nº</string>

    <string name="MENU_PARKINGS">PARKINGS</string>
    <string name="MENU_PARKINGS_HINT">City</string>
    <string name="MENU_PAY_BLUE_ZONE">PAY BLUE ZONE</string>
    <string name="MENU_SWAP_PARKING">SWAP PARKING</string>
    <string name="MENU_CONTACT">CONTACT</string>
    <string name="MENU_MESSAGES">MESSAGES</string>

    <string name="MENU_REWARDS">YOUR REWARDS</string>
    <string name="MENU_REWARDS_COIN_NAME">ADA (Cardano)</string>
    <string name="MENU_REWARDS_COIN_TOTAL">385.7 ADA</string>
    <string name="MENU_REWARDS_TRANSACTION">12472522234</string>
    <string name="MENU_REWARDS_TRANSACTION_DATE">09/05/2022</string>

    <string name="MENU_TOAST_LOCATION_LOAD">¡Guarde primero su localización!</string>
    <string name="APP_NAME_BOTTOM">APPARCA</string>

    <string name="impacted">Impacted</string>
    <string name="following">Following</string>
    <string name="title_activity_google_maps">GoogleMaps</string>
    <string name="guardar_ubicaci_n_actual">Guardar Ubicación Actual</string>
    <string name="title_activity_acceder_localizacion">AccederLocalizacion</string>
    <string name="sin_determinar">Sin Determinar</string>

    <string name="title_activity_parking">Parking</string>
    <string name="title_activity_prueba_parking">PruebaParking</string>
    <string name="title_activity_parking_location">ParkingLocation</string>

    <string-array name="provincias">
        <item>Alava</item>
        ; <item>Albacete</item> ; <item>Alicante</item> ; <item>Almería</item> ; <item>Asturias</item> ;
        <item>Avila</item>
        ; <item>Badajoz</item> ; <item>Barcelona</item> ; <item>Burgos</item> ; <item>Cáceres</item> ;
        <item>Cádiz</item>
        ; <item>Cantabria</item> ; <item>Castellón</item> ; <item>Ciudad Real</item> ; <item>Córdoba</item> ;
        <item>La Coruña</item>
        ; <item>Cuenca</item> ; <item>Gerona</item> ; <item>Granada</item> ; <item>Guadalajara</item> ;
        <item>Guipúzcoa</item>
        ; <item>Huelva</item> ; <item>Huesca</item> ; <item>Islas Baleares</item> ; <item>Jaén</item> ;
        <item>León</item>
        ; <item>Lérida</item> ; <item>Lugo</item> ; <item>Madrid</item> ; <item>Málaga</item> ;
        <item>Murcia</item>
        ; <item>Navarra</item> ; <item>Orense</item> ; <item>Palencia</item> ; <item>Las Palmas</item> ;
        <item>Pontevedra</item>
        ; <item>La Rioja</item> ; <item>Salamanca</item> ; <item>Segovia</item> ; <item>Sevilla</item> ;
        <item>Soria</item>
        ; <item>Tarragona</item> ; <item>Santa Cruz de Tenerife</item> ; <item>Teruel</item> ; <item>Toledo</item> ;
        <item>Valencia</item>
        ; <item>Valladolid</item> ; <item>Vizcaya</item> ; <item>Zamora</item> ; <item>Zaragoza</item> ;
    </string-array>

    <string-array name="marcascoche">
        <item>Abarth</item>
        ; <item>Alfa Romeo</item> ; <item>Aston Martin</item> ; <item>Audi</item> ;
        <item>Bentley</item>
        <item>BMW</item>
        ; <item>Bugatti</item> ; <item>Cadillac</item> ; <item>Chevrolet</item> ;
        <item>Chrysler</item>
        <item>Citroën</item>
        ; <item>Dacia</item> ; <item>Daewoo</item> ; <item>Daihatsu</item> ;
        <item>Dodge</item>
        <item>Donkervoort</item>
        ; <item>DS</item> ; <item>Ferrari</item> ; <item>Fiat</item> ;
        <item>Fisker</item>
        <item>Ford</item>
        ; <item>Honda</item> ; <item>Hummer</item> ; <item>Hyundai</item> ;
        <item>Infiniti</item>
        <item>Iveco</item>
        ; <item>Jaguar</item> ; <item>Jeep</item> ; <item>Kia</item> ;
        <item>KTM</item>
        <item>Lada</item>
        ; <item>Lamborghini</item> ; <item>Lancia</item> ; <item>Land Rover</item> ;
        <item>Landwind</item>
        <item>Lexus</item>
        ; <item>Lotus</item> ; <item>Maserati</item> ; <item>Maybach</item> ;
        <item>Mazda</item>
        <item>McLaren</item>
        ; <item>Mercedes-Benz</item> ; <item>MG</item> ; <item>Mini</item> ;
        <item>Mitsubishi</item>
        <item>Morgan</item>
        ; <item>Nissan</item> ; <item>Opel</item> ; <item>Peugeot</item> ;
        <item>Porsche</item>
        <item>Renault</item>
        ; <item>Rolls-Royce</item> ; <item>Rover</item> ; <item>Saab</item> ;
        <item>Seat</item>
        <item>Skoda</item>
        ; <item>Smart</item> ; <item>SsangYong</item> ; <item>Subaru</item> ;
        <item>Suzuki</item>
        <item>Tesla</item>
        ; <item>Toyota</item> ; <item>Volkswagen</item> ;
        <item>Volvo</item>
    </string-array>
    <string name="title_activity_user_settings">UserSettings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="MENU_DATA_CAMPOS">¡Has de rellenar todos los campos!</string>
    <string name="MENU_SETTINGS">APP Settings</string>
    <string name="MENU_SETTINGS_NOTIFICATIONS">Enable message notifications</string>
    <string name="MENU_SETTINGS_SOUNDS">Enable sounds</string>
    <string name="MENU_SETTINGS_VIBRATION">Enable vibration</string>
</resources>

