<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite_to_NightDarker"
    tools:context=".bluetooth.Bluetooth">

    <View
        android:id="@+id/viewHeaderBackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_125sdp"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"

        android:text="@string/APP_NAME_BOTTOM"
        android:textColor="@color/textWhite90"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_light"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/boton_settings"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"

        android:src="@drawable/menu_settings"
        android:tint="@color/white"

        app:layout_constraintBottom_toBottomOf="@+id/textTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textTitle"

        android:layout_marginEnd="@dimen/_16sdp"
        app:tint="@color/textWhite90"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:strokeColor="@color/secondary_Card_Darker_LightMode"
        app:strokeWidth="@dimen/_1sdp"

        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:cardBackgroundColor="@color/secondary_Card_Darker_LightMode"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="@dimen/_7sdp"

        app:layout_constraintBottom_toBottomOf="@+id/viewHeaderBackground"
        app:layout_constraintTop_toBottomOf="@+id/viewHeaderBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp">

            <TextView
                android:id="@+id/textViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CARD_HEADER_DATA"
                android:textColor="@color/textLight90_Night"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CARD_HEADER_MORE"
                android:textColor="@color/primary"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/layoutClients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/layoutImpacted"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViews">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/menu_cardheader_man" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/CARD_HEADER_CLIENT"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:id="@+id/textNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/sin_determinar"
                    android:textAlignment="center"
                    android:textColor="@color/textLight90_Night"
                    android:textColorHint="@color/textLight90_Night"
                    android:textSize="@dimen/_8ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutImpacted"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/layoutFollowing"
                app:layout_constraintStart_toEndOf="@+id/layoutClients"
                app:layout_constraintTop_toBottomOf="@+id/textViews">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/menu_cardheader_mapa" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/CARD_HEADER_CITY"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:id="@+id/textCiudad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/sin_determinar"
                    android:textAlignment="center"
                    android:textColor="@color/textLight90_Night"
                    android:textColorHint="@color/textLight90_Night"
                    android:textSize="@dimen/_8ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutFollowing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/layoutImpacted"
                app:layout_constraintTop_toBottomOf="@+id/textViews">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/menu_cardheader_coche" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/CARD_HEADER_MODEL"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:id="@+id/textMarca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/sin_determinar"
                    android:textAlignment="center"
                    android:textColor="@color/textLight90_Night"
                    android:textColorHint="@color/textLight90_Night"
                    android:textSize="@dimen/_8ssp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textBluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/cardHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/montserrat_medium"
        android:textStyle="bold"
        android:text="Dispositivos Bluetooth"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"

        android:layout_marginStart="@dimen/_16sdp"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginTop="@dimen/_8sdp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerBluetooth"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@+id/textBluetooth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_marginTop="@dimen/_10sdp"
        tools:listitem="@layout/item_bluetooth"
        tools:itemCount="3"

        android:background="?android:attr/selectableItemBackground"/>

</androidx.constraintlayout.widget.ConstraintLayout>