<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/card_background_darker"
    android:foreground="?android:attr/selectableItemBackground">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_background_darker"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"

            android:paddingVertical="@dimen/_14sdp">

            <ImageView
                android:id="@+id/imageCoin"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                android:layout_marginStart="@dimen/_11sdp"
                android:src="@drawable/menu_pay_cardano"/>

            <TextView
                android:id="@+id/nameCoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MENU_REWARDS_COIN_NAME"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/textWhite90"
                android:textSize="@dimen/_14ssp"

                app:layout_constraintTop_toTopOf="@+id/imageCoin"
                app:layout_constraintBottom_toBottomOf="@+id/imageCoin"
                app:layout_constraintStart_toEndOf="@+id/imageCoin"

                app:layout_constraintVertical_bias="0"
                android:layout_marginStart="@dimen/_16sdp"/>

            <TextView
                android:id="@+id/marketCoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+ 4"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/dashboard_item_5"
                android:textSize="@dimen/_14ssp"

                app:layout_constraintTop_toTopOf="@+id/imageCoin"
                app:layout_constraintBottom_toBottomOf="@+id/imageCoin"
                app:layout_constraintEnd_toEndOf="parent"

                android:layout_marginEnd="@dimen/_11sdp"/>

            <TextView
                android:id="@+id/totalCoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MENU_REWARDS_COIN_TOTAL"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/textWhite25"
                android:textSize="@dimen/_8ssp"

                app:layout_constraintTop_toBottomOf="@+id/nameCoin"
                app:layout_constraintBottom_toBottomOf="@+id/imageCoin"
                app:layout_constraintStart_toStartOf="@+id/nameCoin"

                app:layout_constraintVertical_bias="1"/>

            <TextView
                android:id="@+id/transactionCoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MENU_REWARDS_TRANSACTION"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/textWhite25"
                android:textSize="@dimen/_8ssp"

                app:layout_constraintTop_toTopOf="@+id/totalCoin"
                app:layout_constraintBottom_toBottomOf="@+id/totalCoin"
                app:layout_constraintStart_toEndOf="@+id/totalCoin"

                android:layout_marginStart="@dimen/_11sdp"
                app:layout_constraintVertical_bias="1"/>

            <TextView
                android:id="@+id/dateTransactionCoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MENU_REWARDS_TRANSACTION_DATE"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/textWhite25"
                android:textSize="@dimen/_8ssp"

                app:layout_constraintTop_toTopOf="@+id/totalCoin"
                app:layout_constraintBottom_toBottomOf="@+id/totalCoin"
                app:layout_constraintStart_toEndOf="@+id/transactionCoin"

                android:layout_marginStart="@dimen/_11sdp"
                app:layout_constraintVertical_bias="1"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#fdc019"
        android:elevation="@dimen/_30sdp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_1sdp"

        android:layout_marginHorizontal="@dimen/_20sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>