<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite_to_NightDarker"
    tools:context=".functions.pay.Pay">

    <View
        android:id="@+id/viewHeaderBackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_125sdp"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/boton_search"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@+id/textTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textTitle"
        android:tint="@color/white"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:cardBackgroundColor="@color/cardNightMode_Primary"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="@dimen/_7sdp"

        app:layout_constraintBottom_toBottomOf="@+id/viewHeaderBackground"
        app:layout_constraintTop_toBottomOf="@+id/viewHeaderBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_14sdp">

            <TextView
                android:id="@+id/textViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CARD_HEADER_DATA"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CARD_HEADER_MORE"
                android:textColor="@color/primary"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/layoutClients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/layoutImpacted"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViews">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/man"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/CARD_HEADER_CLIENT"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"/>

                <TextView
                    android:id="@+id/textNombre"
                    android:hint="@string/sin_determinar"
                    android:textColorHint="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8ssp"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutImpacted"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/layoutFollowing"
                app:layout_constraintStart_toEndOf="@+id/layoutClients"
                app:layout_constraintTop_toBottomOf="@+id/textViews">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/mapa"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/CARD_HEADER_CITY"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"/>

                <TextView
                    android:id="@+id/textCiudad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/sin_determinar"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8ssp"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutFollowing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/layoutImpacted"
                app:layout_constraintTop_toBottomOf="@+id/textViews">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/coche"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/CARD_HEADER_MODEL"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"/>

                <TextView
                    android:id="@+id/textMarca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:hint="@string/sin_determinar"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8ssp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCardsPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:animationCache="true"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardHeader"
        app:layout_constraintVertical_bias="0.100000024"

        tools:itemCount="4"
        tools:listitem="@layout/item_card_pay" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintTop_toBottomOf="@+id/recyclerCardsPay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/first"
            android:layout_width="@dimen/_5sdp"
            android:layout_height="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_2sdp"

            app:strokeColor="@color/white"
            app:strokeWidth="@dimen/_1sdp"

            android:translationX="-15dp"
            android:layout_gravity="center" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/second"
            android:layout_width="@dimen/_5sdp"
            android:layout_height="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_2sdp"

            app:strokeColor="@color/white"
            app:strokeWidth="@dimen/_1sdp"

            android:translationX="-5dp"
            android:layout_gravity="center" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/third"
            android:layout_width="@dimen/_5sdp"
            android:layout_height="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_2sdp"

            app:strokeColor="@color/white"
            app:strokeWidth="@dimen/_1sdp"

            android:translationX="5dp"
            android:layout_gravity="center" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/fourth"
            android:layout_width="@dimen/_5sdp"
            android:layout_height="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_2sdp"

            app:strokeColor="@color/white"
            app:strokeWidth="@dimen/_1sdp"

            android:translationX="15dp"
            android:layout_gravity="center"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>